# MixedReality-Sharing

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Directory.Build.props  Microsoft.MixedReality.Sharing.sln  README.md  azure-pipelines.yml  docfx.json  index.html  index.json  manifest.json  toc.html  xrefmap.yml
Microsoft.MixedReality.Sharing.Network.Test/: Microsoft.MixedReality.Sharing.Test.csproj  SimpleMatchmaking.cs  SimpleNetworking.cs  SynchronizationStoreTests.cs
Microsoft.MixedReality.SpatialAlignment/: SpatialCoordinateServiceBase.cs
api/: Microsoft.MixedReality.Sharing.Matchmaking.IDiscoveryAgent.html  Microsoft.MixedReality.Sharing.Matchmaking.IDiscoveryResource.html  Microsoft.MixedReality.Sharing.Matchmaking.IDiscoveryResourceEditor.html  Microsoft.MixedReality.Sharing.Matchmaking.IDiscoverySubscription.html  Microsoft.MixedReality.Sharing.Matchmaking.IPeerDiscoveryMessage.html  Microsoft.MixedReality.Sharing.Matchmaking.IPeerDiscoveryTransport.html  Microsoft.MixedReality.Sharing.Matchmaking.MemoryPeerDiscoveryTransport.html  Microsoft.MixedReality.Sharing.Matchmaking.PeerDiscoveryAgent.Options.html  Microsoft.MixedReality.Sharing.Matchmaking.PeerDiscoveryAgent.html  Microsoft.MixedReality.Sharing.Matchmaking.UdpPeerDiscoveryTransport.Options.html  Microsoft.MixedReality.Sharing.Matchmaking.UdpPeerDiscoveryTransport.html  Microsoft.MixedReality.Sharing.Matchmaking.html
docs/: CODEOWNERS  docfx.json  generateDocs.ps1  index.md  toc.md
manual/: building.html  installation.html  roadmap.html
tools/: create_sln.cmd
(+444 files in other folders)
